[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sci_nb_tools"
version = "0.1.0"
description = "A package containing useful functions for data wrangling and data analysis of biophysics experiments in a Jupyter notebook"
readme = "README.rst"
authors = [
  {name = "Benjamin Fulroth", email = "fulrothb@icloud.com"}
]
maintainers = [
  {name = "Benjamin Fulroth", email = "fulrothb@icloud.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/bfulroth/sci_nb_tools/issues"
changelog = "https://github.com/bfulroth/sci_nb_tools/blob/master/changelog.md"
homepage = "https://github.com/bfulroth/sci_nb_tools"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

